fixed 2nd scrollbar issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,7 +3,7 @@
 @import "bootstrap";
 
 body { 
-	margin: 0 auto; 
+	overflow: hidden; 
 }
 
 @import "bootstrap-responsive";
